# SCCA

./: .env  .env.example  .gitignore  CMakeLists.txt  PRD.txt  README.md  要求.txt
.scca/: config.json
skills/: example.json
src/: agent.cpp  agent.hpp  config.cpp  config.hpp  llm_client.cpp  llm_client.hpp  main.cpp  path_utils.cpp  path_utils.hpp  skill.cpp  skill.hpp  tools.cpp  tools.hpp  tui.cpp  tui.hpp  types.hpp  utf8_utils.cpp  utf8_utils.hpp
